=== Safari-94 ===

2003-08-17  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3247528 -- encodeURI missing from JavaScriptCore (needed by Crystal Reports)
        - fixed 3381297 -- escape method does not escape the null character
        - fixed 3381299 -- escape method produces incorrect escape sequences ala WinIE, rather than correct ala Gecko
        - fixed 3381303 -- unescape method treats escape sequences as Latin-1 ala WinIE rather than as UTF-8 ala Gecko
        - fixed 3381304 -- unescape method garbles strings with bad escape sequences in them

        * kjs/function.h: Added constants for decodeURI, decodeURIComponent, encodeURI, and
        encodeURIComponent.
        * kjs/function.cpp:
        (encode): Added. New helper function for escape, encodeURI, and encodeURIComponent.
        (decode): Added. New helper function for unescape, decodeURI, and decodeURIComponent.
        (GlobalFuncImp::call): Added decodeURI, decodeURIComponent, encodeURI, and encodeURIComponent 
        implementations. Changed escape and unescape to use new helper functions, which fixes
        the four problems above.

        * kjs/internal.cpp: (InterpreterImp::initGlobalObject): Add decodeURI, decodeURIComponent,
        encodeURI, and encodeURIComponent to the global object.

        * kjs/ustring.h: Added a length to the CString class so it can hold strings with null
        characters in them, not just null-terminated strings. This allows a null character from
        a UString to survive the process of UTF-16 to UTF-8 decoding. Added overloads to
        UString::append, UString::UTF8String, UTF8SequenceLength, decodeUTF8Sequence,
        convertUTF16OffsetsToUTF8Offsets, and convertUTF8OffsetsToUTF16Offsets.
        
        * kjs/ustring.cpp:
        (CString::CString): Set up the length properly in all the constructors. Also add a new
        constructor that takes a length.
        (CString::append): Use and set the length properly.